<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyRadio</string>
    <string name="title_music_detail">Music Detail</string>
    <string name="tocar">Tocar</string>
    <string name="pausar">Pausar</string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="adicionar_musicas">Adicionar Músicas</string>
    <string name="music_nome">Música</string>
    <string name="music_artista">Artista</string>
    <string name="music_album">Album</string>
    <string name="music_ano">Ano</string>
    <string name="music_estilo">Estilo</string>
    <string name="music_duracao">Duração</string>
    <string name="salvar">Salvar</string>

</resources>
