<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.soundbird.myradio.mobile.EditMusicActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/label_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music_nome" />

	<EditText
	    android:id="@+id/edit_nome"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:inputType="text"
	    android:ems="10" />

    <TextView
        android:id="@+id/label_artista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music_artista" />

	<EditText
	    android:id="@+id/edit_artista"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:inputType="text"
	    android:ems="10" />

    <TextView
        android:id="@+id/label_album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music_album" />

	<EditText
	    android:id="@+id/edit_album"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:inputType="text"
	    android:ems="10" />

    <TextView
        android:id="@+id/label_ano"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music_ano" />

	<EditText
	    android:id="@+id/edit_ano"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:inputType="number"
	    android:ems="10" />

    <TextView
        android:id="@+id/label_estilo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music_estilo" />

	<EditText
	    android:id="@+id/edit_estilo"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:inputType="text"
	    android:ems="10" />

    <TextView
        android:id="@+id/label_duracao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music_duracao" />

	<EditText
	    android:id="@+id/edit_duracao"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:inputType="number"
	    android:ems="10" />

	<Button
	    android:id="@+id/button1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/salvar" />

</LinearLayout>

